--- a/MT3.vcxproj.filters
+++ b/MT3.vcxproj.filters
@@ -71,6 +71,9 @@
     <ClCompile Include="Sphere.cpp">
       <Filter>KamataEngine</Filter>
     </ClCompile>
+    <ClCompile Include="Operator.cpp">
+      <Filter>KamataEngine</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="C:\KamataEngine\DirectXGame\audio\Audio.h">
@@ -155,5 +158,6 @@
     <ClInclude Include="Bezier.h" />
     <ClInclude Include="CatmullromSpline.h" />
     <ClInclude Include="Lerp.h" />
+    <ClInclude Include="Operator.h" />
   </ItemGroup>
 </Project>
